--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ validateUser(userInput, <span class="kt">function</span>(<span class="nv">error<
   <span class="c1">//   error: {</span>
   <span class="c1">//     attrs: {</span>
   <span class="c1">//       name: {</span>
-  <span class="c1">//         messages: ["can't be empty"]</span>
+  <span class="c1">//         messages: { "can't be empty": "invalid" }</span>
   <span class="c1">//       }</span>
   <span class="c1">//     }</span>
   <span class="c1">//   }</span>
@@ -78,11 +78,13 @@ validateUser(userInput, <span class="kt">function</span>(<span class="nv">error<
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
+<li>Validations registry</li>
 <li>DSL to define validations.</li>
 <li>Nested validations.</li>
 <li>Validation focused on attributes or general.</li>
 <li>Validate the entire object and return all the errors.</li>
 <li>You can use your own functions for validation. Or use a the set of functions like of the <a href="https://github.com/chriso/validator.js">validator</a> package provides.</li>
+<li>validation identification</li>
 </ul>
 
 <h2>
@@ -91,41 +93,47 @@ validateUser(userInput, <span class="kt">function</span>(<span class="nv">error<
 <pre lang="console"><code>npm install --save makesure
 </code></pre>
 
+<p>or for client-side:</p>
+
+<pre lang="console"><code>bower install --save makesure
+</code></pre>
+
 <h2>
 <a id="nested-validation" class="anchor" href="#nested-validation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Nested validation</h2>
 
 <p>You can use makesure validate nested function to validate a whole object and get all the errors at once.</p>
 
-<div class="highlight highlight-js"><pre><span class="k">var</span> validator <span class="o">=</span> <span class="nf">require</span>(<span class="s1">'validator'</span>); <span class="c1">// Only to ilustrate this example</span>
-<span class="k">var</span> makesure <span class="o">=</span> <span class="nf">require</span>(<span class="s1">'makesure'</span>);
-<span class="k">var</span> length <span class="o">=</span> validator.isLength;
-<span class="k">var</span> <span class="nf">empty</span> <span class="o">=</span> <span class="kt">function</span>(<span class="nv">value</span>){
-  <span class="k">return</span> value.<span class="no">length</span> <span class="o">==</span> <span class="m">0</span>;
-};
-<span class="k">var</span> user <span class="o">=</span> {
-  name<span class="o">:</span> <span class="s1">''</span>,
-  address<span class="o">:</span> {
-    street<span class="o">:</span> <span class="s1">''</span>
-  }
-}
+<div class="highlight highlight-js"><pre><span class="k">var</span> makesure <span class="o">=</span> <span class="nf">require</span>(<span class="s1">'makesure'</span>)
+
+<span class="c1">// You can still use nested validations without the registry.</span>
+<span class="c1">// But, this example is using the opportunity to show you makesure's registry.</span>
+makesure.register(<span class="s1">'length'</span>, <span class="nf">require</span>(<span class="s1">'validator'</span>).isLength)
+makesure.register(<span class="s1">'empty'</span>, <span class="kt">function</span>(<span class="nv">value</span>) {
+  <span class="k">return</span> <span class="no">String</span>(value).<span class="no">length</span> <span class="o">==</span> <span class="m">0</span>;
+})
+
 <span class="k">var</span> validateAddress <span class="o">=</span> makesure(<span class="kt">function</span>(){
-  <span class="nb">this</span>.attr(<span class="s1">'street'</span>).isNot(empty).orSay(<span class="s2">"Can't be empty"</span>)
+  <span class="nb">this</span>.attr(<span class="s1">'street'</span>).isNot(<span class="s1">'empty'</span>)
+    .orSay(<span class="s2">"can't be empty"</span>)
 })
 
 <span class="k">var</span> validateUser <span class="o">=</span> makesure(<span class="kt">function</span>(){
-  <span class="nb">this</span>.attr(<span class="s1">'name'</span>).is(length, <span class="m">3</span>, <span class="m">200</span>).orSay(<span class="s1">'Minimum length is 3 and max is 200'</span>)
-  <span class="nb">this</span>.attr(<span class="s1">'address'</span>).validateWith(validateAddress)
+  <span class="nb">this</span>.attr(<span class="s1">'name'</span>).is(<span class="s1">'length'</span>, <span class="m">3</span>, <span class="m">200</span>)
+    .orSay(<span class="s1">'minimum length is 3 and max is 200'</span>)
+  <span class="nb">this</span>.attr(<span class="s1">'address'</span>).with(validateAddress) <span class="c1">// nested</span>
 })
 
-validateUser(user, <span class="kt">function</span>(<span class="nv">error</span>, <span class="nv">user</span>){
-  <span class="c1">// Do the operation you want to...</span>
+validateUser({ name<span class="o">:</span> <span class="s1">''</span>, address<span class="o">:</span> { street<span class="o">:</span> <span class="s1">''</span> } }, <span class="kt">function</span>(<span class="nv">error</span>, <span class="nv">user</span>){
+  <span class="c1">// Do the operation you want to do...</span>
   <span class="c1">// error == {</span>
   <span class="c1">//   error: {</span>
   <span class="c1">//     attrs: {</span>
-  <span class="c1">//       name: { messages: ["Minimum length is 3 and max is 200"] },</span>
+  <span class="c1">//       name: {</span>
+  <span class="c1">//         messages: { "minimum length is 3 and max is 200": "length" }</span>
+  <span class="c1">//       },</span>
   <span class="c1">//       address: {</span>
   <span class="c1">//         attrs: {</span>
-  <span class="c1">//           street: { messages: ["Can't be empty"] }</span>
+  <span class="c1">//           street: { messages: { "can't be empty": "empty" } }</span>
   <span class="c1">//         }</span>
   <span class="c1">//       }</span>
   <span class="c1">//     }</span>
@@ -141,13 +149,16 @@ validateUser(user, <span class="kt">function</span>(<span class="nv">error</span
 <div class="highlight highlight-js"><pre><span class="k">var</span> validateAction <span class="o">=</span> makesure(<span class="kt">function</span>(){
   <span class="nb">this</span>.validate(<span class="kt">function</span>(){
     <span class="k">return</span> <span class="o">new</span> <span class="nc">Date</span>().<span class="nf">getDay</span>() <span class="o">!=</span> <span class="m">7</span>;
-  }).orSay(<span class="s2">"The operation can't be performed on Sunday."</span>);
+  }).orSay(<span class="s2">"The operation can't be performed on Sunday."</span>)
+  .tag(<span class="s2">"sunday_restriction"</span>); <span class="c1">// if not set the tag default 'invalid' is used.</span>
 })
 
 validateAction({}, <span class="kt">function</span>(<span class="nv">error</span>){
 <span class="c1">// error == {</span>
 <span class="c1">//   error: {</span>
-<span class="c1">//     messages: ["The operation can't be performed on Sunday."]</span>
+<span class="c1">//     messages: {</span>
+<span class="c1">//       "The operation can't be performed on Sunday.": "sunday_restriction"</span>
+<span class="c1">//     }</span>
 <span class="c1">//   }</span>
 <span class="c1">// }</span>
 })</pre></div>
@@ -155,7 +166,7 @@ validateAction({}, <span class="kt">function</span>(<span class="nv">error</span
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p>MIT</p>
+<p><a href="https://github.com/sadjow/makesure/blob/master/LICENSE">MIT</a></p>
       </section>
 
     </div>
